change get country from languages services

--- a/src/assets/languages/id.json
+++ b/src/assets/languages/id.json
@@ -5,6 +5,8 @@
     "currency": "Rp",
     "currency_name": "Rupiah",
     "currency_code": "IDR",
+    "input_mask": "separator.0",
+    "input_separator": ".",
     "menu": {
       "help": "Bantuan",
       "admin": "Daftar Admin",
