--- a/src/assets/languages/kh.json
+++ b/src/assets/languages/kh.json
@@ -51,7 +51,16 @@
 			"active": "សកម្ម",
 			"inactive": "អសកម្ម",
 			"search": "ស្វែងរក",
-			"today": "ថ្ងៃនេះ"
+			"today": "ថ្ងៃនេះ",
+      "all": "ទាំងអស់",
+      "delete_retailer": "លុបអ្នកលក់រាយ",
+      "delete_wholesaler": "លុបអ្នកលក់ដុំ",
+      "delete_voucher": "លុបប័ណ្ណទឹកប្រាក់",
+      "order_id_payment": "លេខសម្គាល់បញ្ជាទិញសម្រាប់ការទូទាត់",
+      "date_redeem": "កាលបរិច្ឆេទប្តូរ",
+      "invoice_redeem": "វិក្កយបត្រប្តូរ",
+      "edit_status_voucher": "ផ្លាស់ប្តូរស្ថានភាពប័ណ្ណទឹកប្រាក់",
+      "delete_salestree": "លុបមែកធាងលក់"
 		},
 		"button": {
 			"save": "រក្សាទុក",
@@ -83,7 +92,36 @@
 			"file_browse_label": "ទាញយកហ្វាល់មកដាក់ទីនេះ ឬជ្រើសរើសហ្វាល់",
 			"file_unselected_warn": "មិនបានជ្រើសរើសហ្វាល់",
 			"mandatory_text": "កន្លែងតម្រូវ",
-			"data_not_found": "មិនមានទិន្នន័យ"
+			"data_not_found": "មិនមានទិន្នន័យ",
+      "text1": "ទិន្នន័យត្រូវបានលុបចោលដោយជោគជ័យ",
+      "text2": "ទិន្នន័យត្រូវបានផ្លាស់ប្តូរដោយជោគជ័យ",
+      "text3": " បិទអ្នកគ្រប់គ្រងចម្បង",
+      "text4": " តើអ្នកប្រាកដទេថាចង់បិទទិន្នន័យដែលបានជ្រើសរើសនេះ?",
+      "text5": "បិទ",
+      "text6": "មិនបានជ្រើសរើសអ្នកគ្រប់គ្រងចម្បងទេ",
+      "text7": "តើអ្នកប្រាកដទេថាចង់លុបអ្នកលក់រាយនេះ?",
+      "text8": "ហ្វាល់ត្រូវបានបញ្ចូលដោយជោគជ័យ",
+      "text9": "តើអ្នកប្រាកដទេថាចង់លុបអ្នកលក់ដុំនេះ?",
+      "text10": "តើអ្នកប្រាកដទេថាចង់លុបប័ណ្ណទឹកប្រាក់នេះ?",
+      "text11": "មានបញ្ហាក្នុងការស្វែងរក",
+      "text12": "ចំនួនដៃគូដែលបានជ្រើសរើសមិនអាចទទេបានទេ",
+      "text13": "អ្នកមិនអាចចូលប្រើប្រាស់សិទ្ធិនេះបានទេ!",
+      "text14": "មានបញ្ហាកើតឡើង ខណៈពេលកំពុងបញ្ចេញហ្វាល់",
+      "text15": "មានបញ្ហាកើតឡើងខណៈពេលកំពុងបញ្ចូលហ្វាល់",
+      "text16": "មិនអាចអាប់ឡូតបានទេដោយសារហ្វាល់មិនត្រឹមត្រូវ។ សូមពិនិត្យហ្វាល់របស់អ្នកម្តងទៀត។",
+      "text17": "ជួរទាំងអស់មិនត្រឹមត្រូវទេ",
+      "text18": "តម្រូវឱ្យមានហ្វាល់ប្រភេទ XLS!",
+      "text19": "អ្នកមិនអាចចូលទៅប្រើប្រាស់សិទ្ធិអនុម័តបានទេ!",
+      "text20": "តើអ្នកប្រាកដទេថាចង់ផ្លាស់ប្តូរស្ថានភាពប័ណ្ណទឹកប្រាក់នេះទៅជា {{ status }}",
+      "text21": "ប័ណ្ណទឹកប្រាក់កំពុងត្រូវបានពិនិត្យ",
+      "text22": "ប័ណ្ណទឹកប្រាក់ដែលបានបញ្ចូលកំពុងត្រូវបានពិនិត្យ",
+      "text23": "តម្រូវឱ្យមានការកំណត់លើការទិញអប្បបរមាតាមផលិតផល",
+      "text24": " តើអ្នកប្រាកដទេថាធ្វើ {{ status }} ប័ណ្ណទឹកប្រាក់ B2C ខាងក្រោម?",
+      "text25": "{{ status }} ជោគជ័យ",
+      "text26": "បំពេញចន្លោះដែលតម្រូវឱ្យមាន!",
+      "text27": "ជ្រើសរើសទស្សនិកជនដើម្បីនាំចេញ!",
+      "text28": " មានមែកធាងនៃការលក់ជាន់គ្នា សូមពិនិត្យទិន្នន័យរបស់អ្នកម្ដងទៀត!",
+      "text29": " តើអ្នកប្រាកដទេថាចង់លុបមែកធាងលក់ {{ index }}?"
 		}
 	},
 	"login": {
@@ -97,7 +135,8 @@
 		"text8": "បង្កើតនិងចែករំលែកបេសកកម្មទៅកាន់ SRC ដោយគោរពតាមកម្មវិធីពាណិជ្ជកម្មដែលកំពុងដំណើរការ",
 		"text9": "ចែករំលែកបដានិងការជូនដំណឹងលើប្រព័ន្ធអនឡាញជាមួយអ្នកលក់រាយនិងអ្នកទិញ",
 		"text10": "ចងចាំខ្ញុំ",
-		"text11": "ភ្លេខលេខកូដសម្ងាត់?"
+		"text11": "ភ្លេខលេខកូដសម្ងាត់?",
+    "text12": "គណនីរបស់អ្នកត្រូវបានបិទ! សូមទាក់ទងអ្នកគ្រប់គ្រង!"
 	},
 	"dashboard": {
 		"dashboard1": "ស្វាគមន៍​មកកាន់ផ្ទាំងកម្មវិធី"
