--- a/src/assets/languages/km.json
+++ b/src/assets/languages/km.json
@@ -52,15 +52,15 @@
 			"inactive": "អសកម្ម",
 			"search": "ស្វែងរក",
 			"today": "ថ្ងៃនេះ",
-      "all": "ទាំងអស់",
-      "delete_retailer": "លុបអ្នកលក់រាយ",
-      "delete_wholesaler": "លុបអ្នកលក់ដុំ",
-      "delete_voucher": "លុបប័ណ្ណទឹកប្រាក់",
-      "order_id_payment": "លេខសម្គាល់បញ្ជាទិញសម្រាប់ការទូទាត់",
-      "date_redeem": "កាលបរិច្ឆេទប្តូរ",
-      "invoice_redeem": "វិក្កយបត្រប្តូរ",
-      "edit_status_voucher": "ផ្លាស់ប្តូរស្ថានភាពប័ណ្ណទឹកប្រាក់",
-      "delete_salestree": "លុបមែកធាងលក់",
+			"all": "ទាំងអស់",
+			"delete_retailer": "លុបអ្នកលក់រាយ",
+			"delete_wholesaler": "លុបអ្នកលក់ដុំ",
+			"delete_voucher": "លុបប័ណ្ណទឹកប្រាក់",
+			"order_id_payment": "លេខសម្គាល់បញ្ជាទិញសម្រាប់ការទូទាត់",
+			"date_redeem": "កាលបរិច្ឆេទប្តូរ",
+			"invoice_redeem": "វិក្កយបត្រប្តូរ",
+			"edit_status_voucher": "ផ្លាស់ប្តូរស្ថានភាពប័ណ្ណទឹកប្រាក់",
+			"delete_salestree": "លុបមែកធាងលក់",
 			"all_status": "ស្ថានភាពទាំងអស់"
 		},
 		"button": {
@@ -94,35 +94,35 @@
 			"file_unselected_warn": "មិនបានជ្រើសរើសហ្វាល់",
 			"mandatory_text": "កន្លែងតម្រូវ",
 			"data_not_found": "មិនមានទិន្នន័យ",
-      "text1": "ទិន្នន័យត្រូវបានលុបចោលដោយជោគជ័យ",
-      "text2": "ទិន្នន័យត្រូវបានផ្លាស់ប្តូរដោយជោគជ័យ",
-      "text3": " បិទអ្នកគ្រប់គ្រងចម្បង",
-      "text4": " តើអ្នកប្រាកដទេថាចង់បិទទិន្នន័យដែលបានជ្រើសរើសនេះ?",
-      "text5": "បិទ",
-      "text6": "មិនបានជ្រើសរើសអ្នកគ្រប់គ្រងចម្បងទេ",
-      "text7": "តើអ្នកប្រាកដទេថាចង់លុបអ្នកលក់រាយនេះ?",
-      "text8": "ហ្វាល់ត្រូវបានបញ្ចូលដោយជោគជ័យ",
-      "text9": "តើអ្នកប្រាកដទេថាចង់លុបអ្នកលក់ដុំនេះ?",
-      "text10": "តើអ្នកប្រាកដទេថាចង់លុបប័ណ្ណទឹកប្រាក់នេះ?",
-      "text11": "មានបញ្ហាក្នុងការស្វែងរក",
-      "text12": "ចំនួនដៃគូដែលបានជ្រើសរើសមិនអាចទទេបានទេ",
-      "text13": "អ្នកមិនអាចចូលប្រើប្រាស់សិទ្ធិនេះបានទេ!",
-      "text14": "មានបញ្ហាកើតឡើង ខណៈពេលកំពុងបញ្ចេញហ្វាល់",
-      "text15": "មានបញ្ហាកើតឡើងខណៈពេលកំពុងបញ្ចូលហ្វាល់",
-      "text16": "មិនអាចអាប់ឡូតបានទេដោយសារហ្វាល់មិនត្រឹមត្រូវ។ សូមពិនិត្យហ្វាល់របស់អ្នកម្តងទៀត។",
-      "text17": "ជួរទាំងអស់មិនត្រឹមត្រូវទេ",
-      "text18": "តម្រូវឱ្យមានហ្វាល់ប្រភេទ XLS!",
-      "text19": "អ្នកមិនអាចចូលទៅប្រើប្រាស់សិទ្ធិអនុម័តបានទេ!",
-      "text20": "តើអ្នកប្រាកដទេថាចង់ផ្លាស់ប្តូរស្ថានភាពប័ណ្ណទឹកប្រាក់នេះទៅជា {{ status }}",
-      "text21": "ប័ណ្ណទឹកប្រាក់កំពុងត្រូវបានពិនិត្យ",
-      "text22": "ប័ណ្ណទឹកប្រាក់ដែលបានបញ្ចូលកំពុងត្រូវបានពិនិត្យ",
-      "text23": "តម្រូវឱ្យមានការកំណត់លើការទិញអប្បបរមាតាមផលិតផល",
-      "text24": " តើអ្នកប្រាកដទេថាធ្វើ {{ status }} ប័ណ្ណទឹកប្រាក់ B2C ខាងក្រោម?",
-      "text25": "{{ status }} ជោគជ័យ",
-      "text26": "បំពេញចន្លោះដែលតម្រូវឱ្យមាន!",
-      "text27": "ជ្រើសរើសទស្សនិកជនដើម្បីនាំចេញ!",
-      "text28": " មានមែកធាងនៃការលក់ជាន់គ្នា សូមពិនិត្យទិន្នន័យរបស់អ្នកម្ដងទៀត!",
-      "text29": " តើអ្នកប្រាកដទេថាចង់លុបមែកធាងលក់ {{ index }}?"
+			"text1": "ទិន្នន័យត្រូវបានលុបចោលដោយជោគជ័យ",
+			"text2": "ទិន្នន័យត្រូវបានផ្លាស់ប្តូរដោយជោគជ័យ",
+			"text3": " បិទអ្នកគ្រប់គ្រងចម្បង",
+			"text4": " តើអ្នកប្រាកដទេថាចង់បិទទិន្នន័យដែលបានជ្រើសរើសនេះ?",
+			"text5": "បិទ",
+			"text6": "មិនបានជ្រើសរើសអ្នកគ្រប់គ្រងចម្បងទេ",
+			"text7": "តើអ្នកប្រាកដទេថាចង់លុបអ្នកលក់រាយនេះ?",
+			"text8": "ហ្វាល់ត្រូវបានបញ្ចូលដោយជោគជ័យ",
+			"text9": "តើអ្នកប្រាកដទេថាចង់លុបអ្នកលក់ដុំនេះ?",
+			"text10": "តើអ្នកប្រាកដទេថាចង់លុបប័ណ្ណទឹកប្រាក់នេះ?",
+			"text11": "មានបញ្ហាក្នុងការស្វែងរក",
+			"text12": "ចំនួនដៃគូដែលបានជ្រើសរើសមិនអាចទទេបានទេ",
+			"text13": "អ្នកមិនអាចចូលប្រើប្រាស់សិទ្ធិនេះបានទេ!",
+			"text14": "មានបញ្ហាកើតឡើង ខណៈពេលកំពុងបញ្ចេញហ្វាល់",
+			"text15": "មានបញ្ហាកើតឡើងខណៈពេលកំពុងបញ្ចូលហ្វាល់",
+			"text16": "មិនអាចអាប់ឡូតបានទេដោយសារហ្វាល់មិនត្រឹមត្រូវ។ សូមពិនិត្យហ្វាល់របស់អ្នកម្តងទៀត។",
+			"text17": "ជួរទាំងអស់មិនត្រឹមត្រូវទេ",
+			"text18": "តម្រូវឱ្យមានហ្វាល់ប្រភេទ XLS!",
+			"text19": "អ្នកមិនអាចចូលទៅប្រើប្រាស់សិទ្ធិអនុម័តបានទេ!",
+			"text20": "តើអ្នកប្រាកដទេថាចង់ផ្លាស់ប្តូរស្ថានភាពប័ណ្ណទឹកប្រាក់នេះទៅជា {{ status }}",
+			"text21": "ប័ណ្ណទឹកប្រាក់កំពុងត្រូវបានពិនិត្យ",
+			"text22": "ប័ណ្ណទឹកប្រាក់ដែលបានបញ្ចូលកំពុងត្រូវបានពិនិត្យ",
+			"text23": "តម្រូវឱ្យមានការកំណត់លើការទិញអប្បបរមាតាមផលិតផល",
+			"text24": " តើអ្នកប្រាកដទេថាធ្វើ {{ status }} ប័ណ្ណទឹកប្រាក់ B2C ខាងក្រោម?",
+			"text25": "{{ status }} ជោគជ័យ",
+			"text26": "បំពេញចន្លោះដែលតម្រូវឱ្យមាន!",
+			"text27": "ជ្រើសរើសទស្សនិកជនដើម្បីនាំចេញ!",
+			"text28": " មានមែកធាងនៃការលក់ជាន់គ្នា សូមពិនិត្យទិន្នន័យរបស់អ្នកម្ដងទៀត!",
+			"text29": " តើអ្នកប្រាកដទេថាចង់លុបមែកធាងលក់ {{ index }}?"
 		}
 	},
 	"login": {
@@ -137,7 +137,33 @@
 		"text9": "ចែករំលែកបដានិងការជូនដំណឹងលើប្រព័ន្ធអនឡាញជាមួយអ្នកលក់រាយនិងអ្នកទិញ",
 		"text10": "ចងចាំខ្ញុំ",
 		"text11": "ភ្លេខលេខកូដសម្ងាត់?",
-    "text12": "គណនីរបស់អ្នកត្រូវបានបិទ! សូមទាក់ទងអ្នកគ្រប់គ្រង!"
+		"text12": "គណនីរបស់អ្នកត្រូវបានបិទ! សូមទាក់ទងអ្នកគ្រប់គ្រង!"
+	},
+	"reset_password": {
+		"text1": "កំណត់ពាក្យសម្ងាត់ឡើងវិញ",
+		"text2": "ពាក្យសម្ងាត់​ថ្មី",
+		"text3": "ពាក្យសម្ងាត់ថ្មីត្រូវបានទាមទារ",
+		"text4": "បញ្ជាក់​លេខសំងាត់​ថ្មី",
+		"text5": "បញ្ជាក់ពាក្យសម្ងាត់ថ្មីត្រូវបានទាមទារ",
+		"text6": "កម្មវិធីនេះប្រើ Single Sign On រួចហើយ។ អ្នកអាចកំណត់ពាក្យសម្ងាត់ឡើងវិញនៅក្នុងកម្មវិធីគ្រប់គ្រងពាក្យសម្ងាត់។",
+		"text7": "ការកំណត់ពាក្យសម្ងាត់បានជោគជ័យសូមចូលម្តងទៀត",
+		"text8": "ពាក្យសម្ងាត់ដែលមានការបញ្ជាក់លេខសំងាត់មិនត្រូវគ្នា"
+	},
+	"device_authentication": {
+		"text1": "ការផ្ទៀងផ្ទាត់គណនី",
+		"text2": "បញ្ចូលលេខកូដផ្ទៀងផ្ទាត់ ៦ ខ្ទង់ដែលបានផ្ញើតាមរយៈ",
+		"text3": "ពេលវេលានៅសល់ដើម្បីប្រើលេខកូដផ្ទៀងផ្ទាត់",
+		"text4": "ការផ្ទៀងផ្ទាត់ឧបករណ៍",
+		"text5": "ផ្ញើ ...",
+		"text6": "ផ្ញើលេខកូដផ្ទៀងផ្ទាត់ឡើងវិញ",
+		"text7": "គណនីរបស់អ្នកអសកម្ម! សូមទាក់ទងមក Admin!",
+		"text8": "បានបរាជ័យក្នុងការផ្តល់សិទ្ធិ OTP សូមព្យាយាមម្តងទៀត"
+	},
+	"forgot_password": {
+		"text1": "ភ្លេច​លេខសំងាត់​",
+		"text2": "ត្រលប់ទៅ",
+		"text3": "ចូល",
+		"text4": "អ៊ីមែលត្រូវបានទាមទារ"
 	},
 	"dashboard": {
 		"dashboard1": "ស្វាគមន៍​មកកាន់ផ្ទាំងកម្មវិធី"
@@ -1081,5 +1107,4 @@
 			"text3": "ទិន្នន័យត្រូវបានរក្សាទុកដោយជោគជ័យ"
 		}
 	}
-
 }
