--- a/src/assets/languages/id.json
+++ b/src/assets/languages/id.json
@@ -334,7 +334,9 @@
     "text40": "Kredit/Nota Putih",
     "text41": "Slip Setoran",
     "text42": "Transfer Tunai",
-    "text43": "Uang Tunai"
+    "text43": "Uang Tunai",
+    "text44": "Data Berhasil Disimpan",
+    "text45": "Area geotree yang dipilih tidak boleh kosong"
   },
   "strategic_partnership": {
     "text1": "Strategic Partnership",
