--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -6,6 +6,7 @@
     "currency_name": "US Dollar",
     "currency_code": "USD",
     "input_mask": "separator.2",
+    "input_mask_b2b": "separator.5",
     "input_separator": ",",
     "menu": {
       "help": "Help",
