setting khmer for order GSR

--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -310,7 +310,8 @@
     "text42": "Cash Transfer",
     "text43": "Cash",
     "text44": "Data Saved Successfully",
-    "text45": "The selected geotree area cannot be empty"
+    "text45": "The selected geotree area cannot be empty",
+    "text46": "Order GSR"
   },
   "strategic_partnership": {
     "text1": "Strategic Partnerships",
