--- a/src/assets/languages/id.json
+++ b/src/assets/languages/id.json
@@ -336,7 +336,8 @@
     "text42": "Transfer Tunai",
     "text43": "Uang Tunai",
     "text44": "Data Berhasil Disimpan",
-    "text45": "Area geotree yang dipilih tidak boleh kosong"
+    "text45": "Area geotree yang dipilih tidak boleh kosong",
+    "text46": "Order GSR"
   },
   "strategic_partnership": {
     "text1": "Strategic Partnership",
