--- a/src/assets/languages/km.json
+++ b/src/assets/languages/km.json
@@ -79,7 +79,8 @@
 			"next": "បន្ទាប់",
 			"previous": "ពីមុន",
 			"import": "បញ្ចូល",
-			"export": "បញ្ចេញ"
+			"export": "បញ្ចេញ",
+			"deactivate": "អសកម្ម"
 		},
 		"area": {
 			"national": "ជាតិ",
@@ -211,7 +212,20 @@
 		"text3": "តួនាទី",
 		"text4": "តើអ្នកប្រាកដទេថានឹងបញ្ចប់ចំណុចនេះ?",
 		"text5": "លុបចោលអ្នកគ្រប់គ្រង់ចម្បង",
-		"text6": "តើអ្នកប្រាកដទេថានឹងលុបចោលអ្នកគ្រប់គ្រង់ចម្បងនេះ?"
+		"text6": "តើអ្នកប្រាកដទេថានឹងលុបចោលអ្នកគ្រប់គ្រង់ចម្បងនេះ?",
+		"text7": "បញ្ជីឈ្មោះអ្នកគ្រប់គ្រងសំខាន់",
+		"text8": "ឈ្មោះ",
+		"text9": "អ៊ីមែល",
+		"text10": "ការចូលចុងក្រោយ",
+		"text11": "ធ្វើ​ឱ្យ​ទាន់សម័យ​ចុងក្រោយ",
+		"text12": "ស្ថានភាព",
+		"text13": "សកម្មភាព",
+		"text14": "បិទដំណើរការនាយករដ្ឋបាល",
+		"text15": "តើអ្នកប្រាកដថាចង់បិទទិន្នន័យដែលបានជ្រើសរើសមែនទេ?",
+		"text16": "មិនបានជ្រើសរើសអ្នកគ្រប់គ្រងសំខាន់ទេ។",
+		"text17": "លម្អិត Admin",
+		"text18": "ឈ្មោះ​អ្នកប្រើប្រាស់",
+		"text19": "ព័ត៌មានលម្អិតរបស់អ្នកគ្រប់គ្រង"
 	},
 	"field_force": {
 		"text1": "ផ្លាស់ប្តូរលេខកូដសម្ងាត់ថ្មី",
