--- a/src/assets/languages/km.json
+++ b/src/assets/languages/km.json
@@ -1126,5 +1126,15 @@
 			"text2": "ផ្លាស់ប្តូរការកំណត់ OTP",
 			"text3": "ទិន្នន័យត្រូវបានរក្សាទុកដោយជោគជ័យ"
 		}
-	}
+	},
+	"country_setup": {
+		"page_title_create": "Tambah Country",
+		"page_title_edit": "Ubah Country",
+		"name": "Nama",
+		"phone_code": "Phone Code",
+		"currency": "Currency",
+		"language": "Language",
+		"status": "Status",
+		"action": "Tindakan"
+	  }
 }
