CDE-4243-country-setup: - cleanup translation

--- a/src/assets/languages/en-ph.json
+++ b/src/assets/languages/en-ph.json
@@ -1316,13 +1316,48 @@
     "choose_submission_status": "Select Submission Status"
   },
   "country_setup": {
-    "page_title_create": "Tambah Country",
-    "page_title_edit": "Ubah Country",
-    "name": "Nama",
+    "page_title_index": "Country",
+    "page_title_create": "Add Country",
+    "page_title_edit": "Change Country",
+    "name": "Name",
+    "country_name": "Country Name",
     "phone_code": "Phone Code",
     "currency": "Currency",
     "language": "Language",
+    "country_id": "Country ID",
+    "min_length": "Min Length",
+    "max_length": "Max Length",
+    "symbol": "Symbol",
+    "decimal_separator": "Decimal Separator",
+    "thousand_separator": "Thousand separator",
+    "customer_service": "Customer Service",
+    "access_retailer": "Access Retailer",
     "status": "Status",
-    "action": "Tindakan"
+    "action": "Action",
+    "delete_country": "Delete Country",
+    "delete_country_confirm": "Are you sure you delete the Country"
+  },
+  "language_setup": {
+    "page_title_index": "Language",
+    "page_title_create": "Add Language",
+    "page_title_edit": "Change Language",
+    "file_name": "File Name",
+    "updated": "Updated",
+    "export_file": "Export File",
+    "name": "Name",
+    "select_file": "Select File",
+    "upload_retailer": "Upload Reseller",
+    "upload_wholesaler": "Upload Partner",
+    "upload_principal": "Upload Principal",
+    "no_selected_file": "Unselected File",
+    "upload_json_file": "Upload JSON File",
+    "json_extension": "JSON Required Extension File!",
+    "attribute_not_found": "Attribute Not Found",
+    "file_limit_message": "File size exceeds 2mb",
+    "not_validate": "JSON file has not been validated",
+    "validation_error": "Validation Failed, try again and make sure your file is correct",
+    "on_validation": "The JSON file is in the process of being validated",
+    "validation_success": "Successful validation, please upload data",
+    "validation": "VALIDATION"
   }
 }
