--- a/src/assets/languages/km.json
+++ b/src/assets/languages/km.json
@@ -1128,13 +1128,48 @@
 		}
 	},
 	"country_setup": {
-		"page_title_create": "Tambah Country",
-		"page_title_edit": "Ubah Country",
-		"name": "Nama",
-		"phone_code": "Phone Code",
-		"currency": "Currency",
-		"language": "Language",
-		"status": "Status",
-		"action": "Tindakan"
-	  }
+		"page_title_index": "ប្រទេស",
+		"page_title_create": "បន្ថែមប្រទេស",
+		"page_title_edit": "ផ្លាស់ប្តូរប្រទេស",
+		"name": "ឈ្មោះ",
+		"country_name": "ឈ្មោះប្រទេស",
+		"phone_code": "លេខកូដទូរសព្ទ",
+		"currency": "រូបិយប័ណ្ណ",
+		"language": "ភាសា",
+		"country_id": "លេខសម្គាល់ប្រទេស",
+		"min_length": "ប្រវែងអប្បបរមា",
+		"max_length": "ប្រវែងអតិបរមា",
+		"symbol": "និមិត្តសញ្ញា",
+		"decimal_separator": "សញ្ញាបំបែកទសភាគ",
+		"thousand_separator": "សញ្ញាបំបែកមួយពាន់",
+		"customer_service": "សេវាអតិថិជន",
+		"access_retailer": "អ្នកលក់រាយចូលប្រើ",
+		"ស្ថានភាព": "ស្ថានភាព",
+		"action": "សកម្មភាព",
+		"delete_country": "លុបប្រទេស",
+		"delete_country_confirm": "អ្នក​ប្រាកដ​ថា​អ្នក​លុប​ប្រទេស"
+	},
+	"language_setup": {
+		"page_title_index": "ភាសា",
+		"page_title_create": "បន្ថែមភាសា",
+		"page_title_edit": "ប្តូរភាសា",
+		"file_name": "ឈ្មោះឯកសារ",
+		"updated": "បានធ្វើបច្ចុប្បន្នភាព",
+		"export_file": "ឯកសារនាំចេញ",
+		"name": "ឈ្មោះ",
+		"select_file": "ជ្រើសរើសឯកសារ",
+		"upload_retailer": "ផ្ទុកឡើងអ្នកលក់បន្ត",
+		"upload_wholesaler": "ផ្ទុក​ដៃគូ",
+		"upload_principal": "ផ្ទុកឯកសារដើម",
+		"no_selected_file": "ឯកសារដែលមិនបានជ្រើសរើស",
+		"upload_json_file": "ផ្ទុកឡើងឯកសារ JSON",
+		"json_extension": "JSON Required Extension File!",
+		"attribute_not_found": "រកមិនឃើញគុណលក្ខណៈ",
+		"file_limit_message": "ទំហំឯកសារលើសពី 2mb",
+		"not_validate": "ឯកសារ JSON មិនទាន់មានសុពលភាពទេ",
+		"validation_error": "ការផ្ទៀងផ្ទាត់បានបរាជ័យ សូមព្យាយាមម្តងទៀត ហើយត្រូវប្រាកដថាឯកសាររបស់អ្នកត្រឹមត្រូវ",
+		"on_validation": "ឯកសារ JSON កំពុងស្ថិតក្នុងដំណើរការផ្ទៀងផ្ទាត់",
+		"validation_success": "ការបញ្ជាក់ដោយជោគជ័យ សូមផ្ទុកទិន្នន័យឡើង",
+		"សុពលភាព": "សុពលភាព"
+	}
 }
