CDE-4243-country-setup: - fix upload languages - get country - get translation from api

--- a/src/assets/languages/id.json
+++ b/src/assets/languages/id.json
@@ -1332,6 +1332,7 @@
     "currency": "Currency",
     "language": "Language",
     "country_id": "Country ID",
+    "locale": "Locale Code",
     "min_length": "Min Length",
     "max_length": "Max Length",
     "symbol": "Symbol",
