--- a/src/assets/languages/km.json
+++ b/src/assets/languages/km.json
@@ -1134,6 +1134,7 @@
 		"name": "ឈ្មោះ",
 		"country_name": "ឈ្មោះប្រទេស",
 		"phone_code": "លេខកូដទូរសព្ទ",
+		"locale": "លេខកូដតំបន់",
 		"currency": "រូបិយប័ណ្ណ",
 		"language": "ភាសា",
 		"country_id": "លេខសម្គាល់ប្រទេស",
