CDE-4243-country-setup: - fix km translation

--- a/src/assets/languages/km.json
+++ b/src/assets/languages/km.json
@@ -32,6 +32,8 @@
 			"address": "អាសយដ្ឋាន",
 			"city": "ទីក្រុង",
 			"Province": "ខេត្ត",
+			"city_county": "ស្រុក/ក្រុង",
+			"district": "ស្រុក",
 			"bank_account_number": "លេខគណនីធនាគារ",
 			"bank_account_name": "ឈ្មោះលើគណនីធនាគារ",
 			"bank_name": "ឈ្មោះធនាគារ",
@@ -64,7 +66,49 @@
 			"invoice_redeem": "វិក្កយបត្រប្តូរ",
 			"edit_status_voucher": "ផ្លាស់ប្តូរស្ថានភាពប័ណ្ណទឹកប្រាក់",
 			"delete_salestree": "លុបមែកធាងលក់",
-			"all_status": "ស្ថានភាពទាំងអស់"
+			"all_status": "ស្ថានភាពទាំងអស់",
+			"active_status": "ស្ថានភាពសកម្ម",
+       		"inactive_status": "ស្ថានភាពអសកម្ម",
+			"unregistered_status": "ស្ថានភាពមិនបានចុះឈ្មោះ",
+			"country": "ប្រទេស",
+			"ktp_number": "លេខសម្គាល់ Number",
+			"tax_number": "លេខសម្គាល់ពន្ធ Number",
+			"confirm_password": "បញ្ជាក់ពាក្យសម្ងាត់",
+			"date": "កាលបរិច្ឆេទ",
+			"note": "ចំណាំ",
+			"order_status": "ស្ថានភាពការបញ្ជាទិញ",
+			"updated_at_2": "បានធ្វើបច្ចុប្បន្នភាពនៅលើ",
+			"updated_by_staff": "ធ្វើបច្ចុប្បន្នភាពដោយបុគ្គលិក",
+			"payment_status": "ស្ថានភាពការទូទាត់",
+			"category": "ប្រភេទ",
+			"price": "តម្លៃ",
+			"amount": "ចំនួន",
+			"shopping_note": "ចំណាំ",
+			"print": "បោះពុម្ព",
+			"cash_bill": "វិក័យប័ត្រសាច់ប្រាក់",
+			"all_category": "ប្រភេទទាំងអស់",
+			"available": "អាចប្រើបាន",
+			"unavailable": "មិនអាចប្រើបាន",
+			"all_province": "គ្រប់ខេត្ត",
+			"all_cities": "ទីក្រុងទាំងអស់",
+			"all_district": "គ្រប់ស្រុក",
+			"owner_information": "ព័ត៌មានម្ចាស់",
+			"upload_image": "បង្ហោះរូបភាព",
+			"updated_by": "ធ្វើបច្ចុប្បន្នភាពដោយ"
+		},
+		"order_status": {
+			"new_order": "ការបញ្ជាទិញថ្មី",
+			"cancelled_order": "បញ្ជាទិញត្រូវបានលុបចោល",
+			"process_order": "បញ្ជាទិញត្រូវបានដំណើរការ",
+			"send_order": "បញ្ជាទិញបានផ្ញើ",
+			"received_order": "ការ​បញ្ជា​ទិញ​បាន​ទទួល",
+			"completed_order": "បញ្ជាទិញបានបញ្ចប់",
+			"change_confirmation": "ការបញ្ជាក់ការផ្លាស់ប្តូរ",
+			"change_agreed": "ការ​ផ្លាស់ប្ដូរ​បាន​អនុម័ត",
+			"delivery_ready": "រួចរាល់ក្នុងការដឹកជញ្ជូន",
+			"pickup_ready": "រួចរាល់ក្នុងការទទួល",
+			"on_delivery": "កំពុងដឹកជញ្ជូន",
+			"not_paid_off": "មិនបានបង់ប្រាក់"
 		},
 		"button": {
 			"save": "រក្សាទុក",
@@ -81,7 +125,8 @@
 			"previous": "ពីមុន",
 			"import": "បញ្ចូល",
 			"export": "បញ្ចេញ",
-			"deactivate": "អសកម្ម"
+			"deactivate": "អសកម្ម",
+			"update_status": "ធ្វើបច្ចុប្បន្នភាពស្ថានភាព"
 		},
 		"area": {
 			"national": "ជាតិ",
